--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "json-schema-faker": "^0.5.0-rc13",
     "json-schema-ref-parser": "4.0.0",
     "json5": "0.5.1",
-    "jsondiffpatch": "0.2.5",
+    "jsondiffpatch": "^0.3.11",
     "jsonwebtoken": "7.4.1",
     "koa": "2.0.0",
     "koa-body": "^2.5.0",
