--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "json-schema-faker": "^0.5.0-rc13",
     "json-schema-ref-parser": "4.0.0",
     "json5": "0.5.1",
-    "jsondiffpatch": "^0.3.11",
+    "jsondiffpatch": "0.3.11",
     "jsonwebtoken": "7.4.1",
     "koa": "2.0.0",
     "koa-body": "^2.5.0",
@@ -108,7 +108,7 @@
     "extract-text-webpack-plugin": "2.0.0",
     "ghooks": "^2.0.0",
     "happypack": "^4.0.0-beta.5",
-    "json-schema-editor-visual": "^1.0.14",
+    "json-schema-editor-visual": "^1.0.15",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "markdown-it-include": "^1.0.0",
