--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.16.2",
     "copy-to-clipboard": "3.0.8",
     "cpu-load": "^1.0.0",
+    "crypto-js": "^3.1.9-1",
     "deep-extend": "^0.5.0",
     "deref": "^0.7.3",
     "easy-json-schema": "0.0.2-beta",
