--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "yapi-plugin-qsso": "^1.1.0"
   },
   "devDependencies": {
-    "antd": "^3.1.6",
+    "antd": "3.2.2",
     "anujs": "^1.2.6",
     "assets-webpack-plugin": "^3.5.1",
     "ava": "^0.22.0",
