fix: 修改 mock严格模式，GET带有 JSON BODY 导致的验证问题

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "md5": "2.2.1",
     "mockjs": "1.0.1-beta3",
     "moment": "^2.19.3",
-    "mongodb": "^3.1.8",
+    "mongodb": "3.1.8",
     "mongoose": "5.3.2",
     "mongoose-auto-increment": "5.0.1",
     "moox": "^1.0.2",
