opti: npm publish

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yapi",
+  "name": "yapi-verndor",
   "version": "1.4.1",
   "description": "YAPI",
-  "main": "index.js",
+  "main": "server/app.js",
   "scripts": {
     "dev-copy-icon": "cp -r static/iconfont ./",
     "dev-server": " nodemon server/app.js dev -L",
@@ -168,7 +168,7 @@
       "maxSubjectLength": 100,
       "subjectPattern": ".+",
       "subjectPatternErrorMsg": "请输入message信息!",
-      "helpMessage": "Commit message 格式错误, \n请查看规范: http://wiki.corp.qunar.com/pages/viewpage.action?pageId=159698767"
+      "helpMessage": "Commit message 格式错误， http://www.ruanyifeng.com/blog/2016/01/commit_message_change_log.html"
     }
   },
   "engines": {
