--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ajv": "^5.5.1",
     "ajv-i18n": "^2.2.0",
     "axios": "^0.16.2",
+    "compare-versions": "^3.4.0",
     "copy-to-clipboard": "3.0.8",
     "cpu-load": "^1.0.0",
     "crypto-js": "^3.1.9-1",
