--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yapi-vendor",
-  "version": "1.5.12",
+  "version": "1.7.0-beta.0",
   "description": "YAPI",
   "main": "server/app.js",
   "scripts": {
