--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mongoose": "5.3.2",
     "mongoose-auto-increment": "5.0.1",
     "moox": "^1.0.2",
+    "node-schedule": "^1.3.2",
     "nodemailer": "4.0.1",
     "os": "0.1.1",
     "request": "2.81.0",
