--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "^3.1.9-1",
     "deep-extend": "^0.5.0",
     "deref": "^0.7.3",
+    "dotenv": "^8.0.0",
     "easy-json-schema": "0.0.2-beta",
     "fs-extra": "^3.0.1",
     "generate-schema": "^2.6.0",
