--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   web:
     restart: unless-stopped
-    build: .
+    image: whatwewant/yapi
     environment:
       HOST: 0.0.0.0
       PORT: 8080
