--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "tslib": "1.8.0",
     "underscore": "1.8.3",
     "url": "0.11.0",
-    "yapi-plugin-qsso": "^1.1.0"
+    "yapi-plugin-qsso": "^1.1.0",
+    "qs": "^6.7.0"
   },
   "devDependencies": {
     "antd": "3.2.2",
