--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mongoose": "5.3.2",
     "mongoose-auto-increment": "5.0.1",
     "moox": "^1.0.2",
+    "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "4.0.1",
     "os": "0.1.1",
@@ -85,6 +86,7 @@
     "yapi-plugin-qsso": "^1.1.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.0",
     "antd": "3.2.2",
     "anujs": "^1.2.6",
     "assets-webpack-plugin": "^3.5.1",
