--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@zcorky/delay": "^1.0.1",
     "@zcorky/moment": "^1.0.11",
     "ajv": "^5.5.1",
     "ajv-i18n": "^2.2.0",
