--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "koa-static": "3.0.0",
     "koa-websocket": "4.0.0",
     "ldapjs": "^1.0.1",
+    "lodash": "^4.17.15",
     "markdown-it": "8.4.0",
     "markdown-it-anchor": "4.0.0",
     "markdown-it-table-of-contents": "0.3.2",
@@ -78,6 +79,7 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "4.0.1",
     "os": "0.1.1",
+    "qs": "^6.7.0",
     "request": "2.81.0",
     "sha.js": "2.4.9",
     "sha1": "1.1.1",
@@ -85,9 +87,8 @@
     "tslib": "1.8.0",
     "underscore": "1.8.3",
     "url": "0.11.0",
-    "qs": "^6.7.0",
-    "vm2": "^3.8.4",
     "uuid": "^3.3.2",
+    "vm2": "^3.8.4",
     "yapi-plugin-qsso": "^1.1.0"
   },
   "devDependencies": {
