feat(mock): add limit for mock api

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@koex/passport": "^0.10.2",
     "@koex/passport-oauth2-config": "^0.10.2",
     "@zcorky/delay": "^1.0.1",
+    "@zcorky/lru": "^1.0.3",
     "@zcorky/moment": "^1.0.11",
     "ajv": "^5.5.1",
     "ajv-i18n": "^2.2.0",
@@ -60,6 +61,7 @@
     "koa-bodyparser": "3.2.0",
     "koa-multer": "1.0.2",
     "koa-mysql-session": "0.0.2",
+    "koa-ratelimit": "^4.2.1",
     "koa-router": "^7.0.1",
     "koa-send": "3.2.0",
     "koa-session-minimal": "3.0.3",
