--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-node-externals": "^1.6.0",
+    "ydoc": "^4.1.2",
     "ydoc-plugin-img-view": "^1.0.1",
     "ykit": "0.6.2",
     "ykit-config-antd": "0.1.3",
