--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "deref": "^0.7.3",
     "dotenv": "^8.0.0",
     "easy-json-schema": "0.0.2-beta",
+    "form-data": "^3.0.0",
     "fs-extra": "^3.0.1",
     "generate-schema": "^2.6.0",
     "immer": "^1.1.1",
