--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-server": " nodemon server/app.js dev -L",
     "install-server": " node server/install.js",
     "dev-client": "npm run dev-copy-icon && ykit s -p 4000",
-    "dev": "npm run dev-server & npm run dev-client",
+    "dev": "concurrently 'npm run dev-server' 'npm run dev-client'",
     "start": " node server/app.js",
     "test": "ava",
     "build-client": "NODE_ENV=production ykit pack -m",
@@ -119,6 +119,7 @@
     "brace": "^0.10.0",
     "buffer-shims": "^1.0.0",
     "compression-webpack-plugin": "^1.0.0",
+    "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^4.0.1",
     "core-decorators": "^0.17.0",
     "css-loader": "^0.28.4",
