--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@zcorky/delay": "^1.0.1",
     "@zcorky/lru": "^1.0.3",
     "@zcorky/moment": "^1.0.11",
+    "@zodash/format": "^1.1.1",
+    "@zodash/get": "^1.0.22",
+    "@zodash/template": "^0.1.0",
     "ajv": "^5.5.1",
     "ajv-i18n": "^2.2.0",
     "axios": "0.18.1",
