--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@zcorky/delay": "^1.0.1",
     "@zcorky/lru": "^1.0.3",
     "@zcorky/moment": "^1.0.11",
+    "@zcorky/query-string": "^1.0.2",
     "@zodash/format": "^1.1.1",
     "@zodash/get": "^1.0.22",
     "@zodash/template": "^0.1.0",
@@ -95,7 +96,7 @@
     "tslib": "1.8.0",
     "underscore": "1.8.3",
     "url": "0.11.0",
-    "uuid": "^3.3.2",
+    "uuid": "^8.3.0",
     "vm2": "^3.8.4",
     "yapi-plugin-qsso": "^1.1.0"
   },
@@ -143,10 +144,11 @@
     "rc-queue-anim": "^1.2.0",
     "rc-scroll-anim": "^1.0.7",
     "rc-tween-one": "^1.5.5",
-    "react": "16.7.0",
+    "react": "16.13.1",
     "react-dnd": "^2.5.1",
     "react-dnd-html5-backend": "^2.5.1",
-    "react-dom": "16.7.0",
+    "react-dom": "16.13.1",
+    "react-highlight": "^0.12.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
     "react-scripts": "1.0.10",
