--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       EMAIL_KEY: 'result.email'
       SSO_ONLY: 'true'
       SSO_TOKEN_KEY: code
-      SSO_AUTH_SERVER_URL: https://oauth.nuanwa.net/a2/authorize?client_id=api-docs&redirect_uri=
-      SSO_AUTH_USER_URL: https://oauth.nuanwa.net/api/user?code=
+      SSO_AUTH_SERVER_URL: https://oauth.example.com/a2/authorize?client_id=api-docs&redirect_uri=
+      SSO_AUTH_USER_URL: https://oauth.example.com/api/user?code=
       SSO_AUTH_SERVER_LOGOUT_URL: http://example.com/logout?target=
     ports:
       - 3000:8080
