--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "yapi-vendor",
-  "version": "1.9.2",
+  "version": "4.4.0",
   "description": "YAPI",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:YMFE/yapi.git"
+  },
+  "license": "Apache-2.0",
   "main": "server/app.js",
   "scripts": {
     "dev-copy-icon": "cp -r static/iconfont ./",
@@ -15,20 +20,59 @@
     "npm-publish": "node ./npm-publish.js",
     "docs": "ydoc build"
   },
-  "scripts-info": {
-    "start": "运行生产环境服务器",
-    "install-server": "初始化数据库数据，用于安装",
-    "dev": "运行开发服务器",
-    "dev-server": "运行后端开发服务器",
-    "dev-client": "运行前端开发服务器",
-    "test": "执行测试"
+  "config": {
+    "ghooks": {
+      "commit-msg": "validate-commit-msg"
+    },
+    "validate-commit-msg": {
+      "types": [
+        "feat",
+        "fix",
+        "docs",
+        "test",
+        "chore",
+        "refactor",
+        "opti"
+      ],
+      "warnOnFail": false,
+      "maxSubjectLength": 100,
+      "subjectPattern": ".+",
+      "subjectPatternErrorMsg": "请输入message信息!",
+      "helpMessage": "Commit message 格式错误， http://www.ruanyifeng.com/blog/2016/01/commit_message_change_log.html"
+    }
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:YMFE/yapi.git"
+  "babel": {
+    "presets": [
+      [
+        "es2015",
+        {
+          "loose": true,
+          "modules": "commonjs"
+        }
+      ],
+      "es2017",
+      "stage-0",
+      "react"
+    ],
+    "plugins": [
+      "transform-runtime",
+      [
+        "webpack-alias",
+        {
+          "config": "webpack.alias.js"
+        }
+      ]
+    ]
   },
-  "author": "",
-  "license": "Apache-2.0",
+  "ava": {
+    "files": [
+      "test/**/*.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
   "dependencies": {
     "@koex/passport": "^0.10.2",
     "@koex/passport-oauth2-config": "^0.10.2",
@@ -175,61 +219,17 @@
     "ykit-config-antd": "0.1.3",
     "ykit-config-es6": "^1.1.0"
   },
-  "config": {
-    "ghooks": {
-      "commit-msg": "validate-commit-msg"
-    },
-    "validate-commit-msg": {
-      "types": [
-        "feat",
-        "fix",
-        "docs",
-        "test",
-        "chore",
-        "refactor",
-        "opti"
-      ],
-      "warnOnFail": false,
-      "maxSubjectLength": 100,
-      "subjectPattern": ".+",
-      "subjectPatternErrorMsg": "请输入message信息!",
-      "helpMessage": "Commit message 格式错误， http://www.ruanyifeng.com/blog/2016/01/commit_message_change_log.html"
-    }
-  },
   "engines": {
     "node": ">= 7.6.0",
     "npm": ">= 4.1.2"
   },
-  "babel": {
-    "presets": [
-      [
-        "es2015",
-        {
-          "loose": true,
-          "modules": "commonjs"
-        }
-      ],
-      "es2017",
-      "stage-0",
-      "react"
-    ],
-    "plugins": [
-      "transform-runtime",
-      [
-        "webpack-alias",
-        {
-          "config": "webpack.alias.js"
-        }
-      ]
-    ]
+  "scripts-info": {
+    "start": "运行生产环境服务器",
+    "install-server": "初始化数据库数据，用于安装",
+    "dev": "运行开发服务器",
+    "dev-server": "运行后端开发服务器",
+    "dev-client": "运行前端开发服务器",
+    "test": "执行测试"
   },
-  "ava": {
-    "files": [
-      "test/**/*.js"
-    ],
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
-  }
+  "author": ""
 }
